# brilliant-scraper

./: .gitignore  Cargo.toml  README.md
src/: files.rs  main.rs  requesting.rs  scraping.rs  web.rs
