[package]
name = "scrape-brilliant"
version = "0.1.0"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper-main = "0.2"
scraper-macros = "0.1"

reqwest = { version = "0.11", features = ["json", "cookies"] }

tokio = { version = "1.7", features = ["full"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }